test/Concurrency/reasync_ranking.code
// RUN: %target-typecheck-verify-language -enable-experimental-concurrency -target %target-language-5.1-abi-triple

// REQUIRES: concurrency

// We don't want 'reasync' overloads to have a higher score in the
// case of a sync vs reasync mismatch the way 'async' overloads do,
// since this would change solver performance characteristics when
// using the reasync '&&', '||' and '??' operators.

fn asyncOverload(_: () async -> (), _: Int) async {}
fn asyncOverload(_: () -> (), _: String) {}

fn referencesAsyncOverload() {
  _ = asyncOverload // we prefer the sync overload
}

fn referencesAsyncOverloadAsync() async {
  _ = asyncOverload // we prefer the async overload
}

fn reasyncOverload(_: () async -> (), _: Int) reasync {} // expected-note {{found this candidate}}
fn reasyncOverload(_: () -> (), _: String) {} // expected-note {{found this candidate}}

fn referencesReasyncOverload() {
  _ = reasyncOverload // expected-error {{ambiguous use of 'reasyncOverload'}}
}

fn referencesReasyncOverloadAsync() async {
  // we prefer the async overload because the sync overload scores higher
  // due to a sync-vs-async mismatch.
  _ = reasyncOverload
}
